tests/baselines/reference/superAccess2.errors.txt
==== tests/cases/compiler/superAccess2.ts (9 errors) ====
    class P {
        x() { }
        static y() { }
    }
    
    class Q extends P {
        xx = super;
                  ~
!!! error TS1005: '.' expected.
        static yy = super; // error for static initializer accessing super
                         ~
!!! error TS1005: '.' expected.
    
        // Super is not allowed in constructor args
        constructor(public z = super, zz = super, zzz = () => super) {
                                    ~
!!! error TS1005: '.' expected.
                                                ~
!!! error TS1005: '.' expected.
                                                                   ~
!!! error TS1005: '.' expected.
            super();
        }
    
        foo(zz = super) {
                      ~
!!! error TS1005: '.' expected.
            super.x();
            super.y(); // error
                  ~
!!! error TS2094: The property 'y' does not exist on value of type 'P'.
        }
    
        static bar(zz = super) {
                             ~
!!! error TS1005: '.' expected.
            super.x(); // error
                  ~
!!! error TS2094: The property 'x' does not exist on value of type 'typeof P'.
            super.y();
        }
    }